# ros-programs

./: README
devel/: .catkin  .rosinstall  setup.sh
devel/include/agitr/: TimerAction.h  TimerActionFeedback.h  TimerActionGoal.h  TimerActionResult.h  TimerFeedback.h  TimerGoal.h  TimerResult.h  WordCount.h  WordCountRequest.h  WordCountResponse.h
devel/include/rosserial_arduino/: Adc.h  TestRequest.h  TestResponse.h
devel/include/rosserial_mbed/: Adc.h  TestRequest.h  TestResponse.h
devel/include/rosserial_msgs/: Log.h  RequestMessageInfoRequest.h  RequestMessageInfoResponse.h  RequestParamRequest.h  RequestParamResponse.h  RequestServiceInfoRequest.h  RequestServiceInfoResponse.h  TopicInfo.h
devel/lib/agitr/: count_and_log  hello
devel/lib/pkgconfig/: agitr.pc  rosserial_arduino.pc  rosserial_client.pc  rosserial_embeddedlinux.pc  rosserial_mbed.pc  rosserial_msgs.pc  rosserial_python.pc  rosserial_server.pc  rosserial_test.pc  rosserial_tivac.pc  rosserial_windows.pc  rosserial_xbee.pc
devel/lib/rosserial_server/: serial_node  socket_node  udp_socket_node
devel/share/agitr/cmake/: agitr-msg-extras.cmake  agitr-msg-paths.cmake  agitrConfig.cmake
devel/share/rosserial_arduino/cmake/: rosserial_arduino-extras.cmake  rosserial_arduino-msg-extras.cmake  rosserial_arduino-msg-paths.cmake  rosserial_arduinoConfig.cmake
devel/share/rosserial_client/cmake/: rosserial_clientConfig.cmake
devel/share/rosserial_embeddedlinux/cmake/: rosserial_embeddedlinuxConfig.cmake
devel/share/rosserial_mbed/cmake/: rosserial_mbed-msg-extras.cmake  rosserial_mbed-msg-paths.cmake  rosserial_mbedConfig.cmake
devel/share/rosserial_msgs/cmake/: rosserial_msgs-msg-extras.cmake  rosserial_msgs-msg-paths.cmake  (+1 more)
src/agitr/: CMakeLists.txt  CMakeLists.txt~  count_and_log.cpp  fancy_action_client.py  fancy_action_server.py  helloros.cpp  helloros.cpp~  package.xml  package.xml~  pubvel.cpp  pubvel.cpp~  ros_launch.launch  service_client.py  service_server.py  simple_action_client.py  simple_action_server.py  subpose.cpp  topic_publisher.py  topic_subscriber.py
(+38 files in other folders)
